--- a/include/css/style.css
+++ b/include/css/style.css
@@ -642,11 +642,14 @@ ul:not([class]) > li:last-child {
 }
 /* =================core css ends here================= */
 /* ================= Header Start ================= */
+.collection-toggle {
+  display: none;
+}
 .collection-toggler-icon {
   position: relative;
   display: inline-block;
-  width: 24px;
-  height: 3px;
+  width: 30px;
+  height: 2px;
   color: #243238;
   text-indent: -55px;
   margin-top: 0;
@@ -660,14 +663,14 @@ ul:not([class]) > li:last-child {
 }
 
 .collection-toggler:before {
-  top: -10px;
+  top: -8px;
 }
 
 .collection-toggler-icon:before,
 .collection-toggler-icon:after {
   content: "";
   width: 30px;
-  height: 3px;
+  height: 2px;
   background: #fff;
   position: absolute;
   left: 0;
@@ -675,10 +678,10 @@ ul:not([class]) > li:last-child {
   border-radius: 10px;
 }
 .collection-toggler-icon:before {
-  top: -10px;
+  top: -8px;
 }
 .collection-toggler-icon:after {
-  bottom: -10px;
+  bottom: -8px;
 }
 .collection-toggler {
   height: 24px;
@@ -702,10 +705,10 @@ ul:not([class]) > li:last-child {
   display: flex;
   align-items: center;
   /* border-bottom: 1px solid #333; */
-  border-bottom: 1px solid hsla(0, 0%, 100%, 0.16);
+  /* border-bottom: 1px solid hsla(0, 0%, 100%, 0.16); */
 }
 #header:hover {
-  /* background-color: #eae8e2; */
+  background-color: #eae8e2;
   transition: all 0.2s ease-in;
 }
 .fixed #header {
@@ -744,17 +747,23 @@ ul:not([class]) > li:last-child {
 }
 .navbar-expand-xl .navbar-nav .nav-link {
   font-size: 18px;
-  text-transform: capitalize;
+  text-transform: uppercase;
   line-height: 40px;
   font-weight: 500;
   color: #fff;
-  padding: 0;
+  padding: 0 !important;
   margin: 0;
   display: block;
   letter-spacing: 0.9px;
 }
-.navbar-expand-xl .navbar-nav .nav-link:after {
-  /* background: #9f664a; */
+.navbar-expand-xl .navbar-nav .nav-link img {
+  margin-bottom: 20px;
+  height: 212px;
+  width: 100%;
+  object-fit: cover;
+}
+/* .navbar-expand-xl .navbar-nav .nav-link:after {
+
   background: #333;
   content: "";
   display: block;
@@ -763,11 +772,11 @@ ul:not([class]) > li:last-child {
   width: 0;
 }
 .navbar-expand-xl .navbar-nav .nav-link:hover:after {
-  /* background: #9f664a; */
+
   background: #333;
   content: "";
   width: 100%;
-}
+} */
 .navbar-expand-xl .navbar-nav .nav-link.active,
 .fixed .navbar-expand-xl .navbar-nav .nav-link.active {
   color: #9f664a !important;
@@ -1109,42 +1118,42 @@ ul:not([class]) > li:last-child {
 /* ===================================================== */
 /* ===================================================== */
 
-@media only screen and (min-width: 1200px) {
-  .navbar-nav > li > .dropdown-menu {
-    display: block !important;
-    top: 100% !important;
-    margin-top: 10px !important;
-    opacity: 0;
-    visibility: hidden;
-    background: #333;
-    color: #fff;
-    min-width: 180px;
-    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
-    border: 0;
-    border-radius: 0;
-    transition: all 0.1s ease-in;
-    -moz-transition: all 0.1s ease-in;
-    -webkit-transition: all 0.1s ease-in;
-  }
-  .dropdown:hover .dropdown-menu {
-    opacity: 1;
-    visibility: visible;
-    margin-top: 0px !important;
-    transition: all 0.2s ease-in;
-    -moz-transition: all 0.2s ease-in;
-    -webkit-transition: all 0.2s ease-in;
-  }
-  .dropdown-item {
-    color: #fff;
-    padding: 5px 15px;
-    font-weight: 400;
-  }
-  .dropdown-item:focus,
-  .dropdown-item:hover {
-    color: #333;
-    background: transparent;
-  }
+/* @media only screen and (min-width: 1200px) { */
+.navbar-nav > li > .dropdown-menu {
+  display: block !important;
+  top: 100% !important;
+  margin-top: 10px !important;
+  opacity: 0;
+  visibility: hidden;
+  background: #333;
+  color: #fff;
+  min-width: 180px;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
+  border: 0;
+  border-radius: 0;
+  transition: all 0.1s ease-in;
+  -moz-transition: all 0.1s ease-in;
+  -webkit-transition: all 0.1s ease-in;
 }
+.dropdown:hover .dropdown-menu {
+  opacity: 1;
+  visibility: visible;
+  margin-top: 0px !important;
+  transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+}
+.dropdown-item {
+  color: #fff;
+  padding: 5px 15px;
+  font-weight: 400;
+}
+.dropdown-item:focus,
+.dropdown-item:hover {
+  color: #333;
+  background: transparent;
+}
+/* } */
 .navbar-toggler {
   width: 45px;
   height: 45px;
@@ -1157,7 +1166,7 @@ ul:not([class]) > li:last-child {
   margin: 0;
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
 }
 .navbar-default .navbar-toggler:hover,
 .navbar-default .navbar-toggler:focus {
@@ -1241,14 +1250,14 @@ ul:not([class]) > li:last-child {
 .header-main-content {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 12px 0;
+  /* justify-content: space-between; */
+  padding: 20px 40px;
 }
 .navbar-inside {
   display: flex;
   width: 100%;
   align-items: center;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
   position: relative;
   /* padding-bottom: 10px; */
 }
@@ -1260,6 +1269,8 @@ ul:not([class]) > li:last-child {
   position: relative;
   /* padding: 20px 0 20px; */
   gap: 20px;
+  width: 50%;
+  padding-left: 100px;
 }
 .fixed .header-top,
 #header:hover .header-top {
@@ -1343,6 +1354,7 @@ ul:not([class]) > li:last-child {
   font-weight: 500;
   color: #fff;
 }
+#header:hover .navbar-brand img,
 .fixed .navbar-brand img {
   /* filter: invert(99%) sepia(33%) saturate(162%) hue-rotate(285deg)
     brightness(116%) contrast(100%); */
@@ -1354,18 +1366,22 @@ ul:not([class]) > li:last-child {
 .fixed .collection-toggler-icon:after {
   background: #333 !important;
 }
+#header:hover .search-container label,
 .fixed .search-container label {
   border: 1px solid #333;
 }
+#header:hover .search-container button svg path,
 .fixed .search-container button svg path {
   fill: #333;
 }
+#header:hover .search-container input::placeholder,
 .fixed .search-container input::placeholder {
   color: #333;
 }
 /* ==================================================================================== */
 .search-container {
   position: relative;
+  z-index: 999;
 }
 
 .search-container label {
@@ -1373,11 +1389,12 @@ ul:not([class]) > li:last-child {
   align-items: center;
   justify-content: flex-start;
   background-color: transparent;
-  border: 1px solid hsla(0, 0%, 100%, 0.3);
+  border: 1px solid #fff;
   cursor: pointer;
   min-width: 300px;
   flex-direction: row-reverse;
   padding: 8px 12px;
+  border-radius: 30px;
 }
 
 .search-container input {
@@ -5066,12 +5083,213 @@ h2.rv_name {
 /* ========================================== 
 ! Large devices (desktops, less than 1200px)
 =========================================== */
+
+/* **************************************************************************************** */
+.navbar-expand-xl .navbar-toggler {
+  display: block;
+}
+.navbar-toggler:focus {
+  box-shadow: none;
+}
+
+.navbar-toggler {
+  width: 54px;
+  height: 40px;
+  height: 60px;
+  border-radius: 0;
+  cursor: pointer;
+  text-decoration: none;
+  padding: 0;
+  border: 0;
+  background: transparent;
+  margin: 0;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  z-index: 999;
+  transform: translateY(-50%);
+}
+.navbar-default .navbar-toggler:hover,
+.navbar-default .navbar-toggler:focus {
+  background: transparent;
+}
+.navbar-toggler:not([class="collapsed"]),
+.navbar-toggler:not([class="collapsed"]):focus,
+.navbar-toggler:not([class="collapsed"]):hover {
+  background: transparent;
+}
+.navbar-toggler.collapsed,
+.navbar-toggler.collapsed:focus,
+.navbar-toggler.collapsed:hover {
+  background: transparent;
+}
+.home .navbar-toggler.collapsed,
+.home .navbar-toggler.collapsed:focus,
+.home .navbar-toggler.collapsed:hover {
+  background: transparent;
+}
+.navbar-toggler .navbar-toggler-icon {
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 2px;
+  color: #243238;
+  text-indent: -55px;
+  margin-top: 0;
+  background: transparent !important;
+  transition: all 0.2s ease-out;
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  -ms-transition: all 0.2s ease-out;
+  vertical-align: middle;
+  border-radius: 10px;
+}
+.navbar-toggler .navbar-toggler-icon:before,
+.navbar-toggler .navbar-toggler-icon:after {
+  content: "";
+  width: 30px;
+  height: 2px;
+  background: #fff;
+  position: absolute;
+  left: 0;
+  transition: all 0.2s ease-out;
+  border-radius: 10px;
+}
+.navbar-toggler.collapsed .navbar-toggler-icon {
+  background: #fff !important;
+}
+.navbar-toggler.collapsed .navbar-toggler-icon:before,
+.navbar-toggler.collapsed .navbar-toggler-icon:after {
+  background: #fff;
+}
+.fixed #header {
+  background: #eae8e2;
+}
+ 
+
+#header:hover .navbar-toggler.collapsed .navbar-toggler-icon,
+#header:hover .navbar-toggler.collapsed .navbar-toggler-icon:before,
+#header:hover .navbar-toggler.collapsed .navbar-toggler-icon:after,
+#header:hover .navbar-toggler .navbar-toggler-icon:before,
+#header:hover .navbar-toggler .navbar-toggler-icon:after,
+.fixed .navbar-toggler.collapsed .navbar-toggler-icon,
+.fixed .navbar-toggler.collapsed .navbar-toggler-icon:before,
+.fixed .navbar-toggler.collapsed .navbar-toggler-icon:after,
+.fixed .navbar-toggler .navbar-toggler-icon:before,
+.fixed .navbar-toggler .navbar-toggler-icon:after {
+  background: #333 !important;
+}
+.navbar-toggler.collapsed .navbar-toggler-icon:before {
+  top: -10px;
+  -webkit-transform: rotateZ(0deg);
+  -moz-transform: rotateZ(0deg);
+  -ms-transform: rotateZ(0deg);
+  -o-transform: rotateZ(0deg);
+  transform: rotateZ(0deg);
+}
+.navbar-toggler .navbar-toggler-icon:before {
+  top: 0;
+  -webkit-transform: rotateZ(45deg);
+  -moz-transform: rotateZ(45deg);
+  -ms-transform: rotateZ(45deg);
+  -o-transform: rotateZ(45deg);
+  transform: rotateZ(45deg);
+}
+.navbar-toggler.collapsed .navbar-toggler-icon:after {
+  bottom: -10px;
+  -webkit-transform: rotateZ(0deg);
+  -moz-transform: rotateZ(0deg);
+  -ms-transform: rotateZ(0deg);
+  -o-transform: rotateZ(0deg);
+  transform: rotateZ(0deg);
+}
+.navbar-toggler .navbar-toggler-icon:after {
+  bottom: 0;
+  -webkit-transform: rotateZ(-45deg);
+  -moz-transform: rotateZ(-45deg);
+  -ms-transform: rotateZ(-45deg);
+  -o-transform: rotateZ(-45deg);
+  transform: rotateZ(-45deg);
+}
+.header-right {
+  position: relative;
+  z-index: 999;
+  margin-right: 50px;
+}
+.navbar-collapse,
+.navbar-collapse.collapsing {
+  position: fixed;
+  top: 0px;
+  left: 0;
+  /* background: #efeeea; */
+  background-color: #eae8e2;
+  padding: 0;
+  z-index: 99;
+  margin: 0;
+  border: 0;
+  overflow-y: auto;
+  bottom: 0;
+  width: 100%;
+  height: 0;
+  display: block !important;
+  transition: all 0.3s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+/* .fixed .navbar-collapse,
+.fixed .navbar-collapse.collapsing {
+  background: #efeeea;
+} */
+.navbar-expand-xl .navbar-nav .nav-link {
+  color: #333 !important;
+}
+.fixed .navbar-expand-xl .navbar-nav .nav-link {
+  color: #333 !important;
+}
+.navbar .collapse.show {
+  height: calc(100vh - 0px);
+}
+.navbar-inside {
+  height: calc(100vh - 80px);
+  padding: 44px 60px;
+  display: flex;
+  flex-flow: column;
+}
+.navbar-expand-xl .navbar-nav .nav-item {
+  padding: 0;
+  margin: 0;
+  /* border-bottom: solid 1px #333; */
+  width: 100%;
+}
+.navbar-nav {
+  width: 100%;
+  gap: 20px;
+  flex-direction: row;
+}
+.navbar-expand-xl .navbar-nav .nav-link {
+  font-size: 18px;
+  line-height: 30px;
+  padding: 15px 0;
+  position: relative;
+  color: #000;
+}
+
+.navbar-nav.sm-collapsible .sub-arrow {
+  display: none;
+  border: 0;
+  margin: 0;
+  width: auto;
+  font-size: 30px;
+  line-height: 60px;
+  top: 0;
+  height: 60px;
+  color: #333;
+  width: 40px;
+}
+
+/* **************************************************************************************** */
+
 @media (max-width: 1199.98px) {
   body {
     padding-top: 0px;
-  }
-  #header {
-    /* background: #eae8e2; */
   }
   .collection-toggler {
     display: none;
@@ -5081,184 +5299,10 @@ h2.rv_name {
     width: 100%;
     height: 80px;
   }
-  .navbar-toggler {
-    width: 54px;
-    height: 40px;
-    height: 60px;
-    order-radius: 0;
-    cursor: pointer;
-    text-decoration: none;
-    padding: 0;
-    border: 0;
-    background: transparent;
-    margin: 0;
-    position: absolute;
-    right: 0;
-    top: 50%;
-    z-index: 999;
-    transform: translateY(-50%);
-  }
-  .navbar-default .navbar-toggler:hover,
-  .navbar-default .navbar-toggler:focus {
-    background: transparent;
-  }
-  .navbar-toggler:not([class="collapsed"]),
-  .navbar-toggler:not([class="collapsed"]):focus,
-  .navbar-toggler:not([class="collapsed"]):hover {
-    background: transparent;
-  }
-  .navbar-toggler.collapsed,
-  .navbar-toggler.collapsed:focus,
-  .navbar-toggler.collapsed:hover {
-    background: transparent;
-  }
-  .home .navbar-toggler.collapsed,
-  .home .navbar-toggler.collapsed:focus,
-  .home .navbar-toggler.collapsed:hover {
-    background: transparent;
-  }
-  .navbar-toggler .navbar-toggler-icon {
-    position: relative;
-    display: inline-block;
-    width: 24px;
-    height: 3px;
-    color: #243238;
-    text-indent: -55px;
-    margin-top: 0;
-    background: transparent !important;
-    transition: all 0.2s ease-out;
-    -webkit-transition: all 0.2s ease-out;
-    -moz-transition: all 0.2s ease-out;
-    -ms-transition: all 0.2s ease-out;
-    vertical-align: middle;
-    border-radius: 10px;
-  }
-  .navbar-toggler .navbar-toggler-icon:before,
-  .navbar-toggler .navbar-toggler-icon:after {
-    content: "";
-    width: 30px;
-    height: 3px;
-    background: #fff;
-    position: absolute;
-    left: 0;
-    transition: all 0.2s ease-out;
-    border-radius: 10px;
-  }
-  .navbar-toggler.collapsed .navbar-toggler-icon {
-    background: #fff !important;
-  }
-  .navbar-toggler.collapsed .navbar-toggler-icon:before,
-  .navbar-toggler.collapsed .navbar-toggler-icon:after {
-    background: #fff;
-  }
-  .fixed #header {
-    background: #efeeea;
-  }
-  .fixed .navbar-toggler.collapsed .navbar-toggler-icon,
-  .fixed .navbar-toggler.collapsed .navbar-toggler-icon:before,
-  .fixed .navbar-toggler.collapsed .navbar-toggler-icon:after,
-  .fixed .navbar-toggler .navbar-toggler-icon:before,
-  .fixed .navbar-toggler .navbar-toggler-icon:after {
-    background: #333 !important;
-  }
-  .navbar-toggler.collapsed .navbar-toggler-icon:before {
-    top: -10px;
-    -webkit-transform: rotateZ(0deg);
-    -moz-transform: rotateZ(0deg);
-    -ms-transform: rotateZ(0deg);
-    -o-transform: rotateZ(0deg);
-    transform: rotateZ(0deg);
-  }
-  .navbar-toggler .navbar-toggler-icon:before {
-    top: 0;
-    -webkit-transform: rotateZ(45deg);
-    -moz-transform: rotateZ(45deg);
-    -ms-transform: rotateZ(45deg);
-    -o-transform: rotateZ(45deg);
-    transform: rotateZ(45deg);
-  }
-  .navbar-toggler.collapsed .navbar-toggler-icon:after {
-    bottom: -10px;
-    -webkit-transform: rotateZ(0deg);
-    -moz-transform: rotateZ(0deg);
-    -ms-transform: rotateZ(0deg);
-    -o-transform: rotateZ(0deg);
-    transform: rotateZ(0deg);
-  }
-  .navbar-toggler .navbar-toggler-icon:after {
-    bottom: 0;
-    -webkit-transform: rotateZ(-45deg);
-    -moz-transform: rotateZ(-45deg);
-    -ms-transform: rotateZ(-45deg);
-    -o-transform: rotateZ(-45deg);
-    transform: rotateZ(-45deg);
-  }
-  .header-right {
-    position: relative;
-    z-index: 999;
-    margin-right: 50px;
-  }
-  .navbar-collapse,
-  .navbar-collapse.collapsing {
-    position: fixed;
-    top: 0px;
-    left: 0;
-    /* background: #efeeea; */
-    background-color: #000000d6;
-    padding: 0;
-    z-index: 99;
-    margin: 0;
-    border: 0;
-    overflow-y: auto;
-    bottom: 0;
-    width: 100%;
-    height: 0;
-    display: block !important;
-    transition: all 0.3s cubic-bezier(0.77, 0.2, 0.05, 1);
-  }
-  /* .fixed .navbar-collapse,
-  .fixed .navbar-collapse.collapsing {
-    background: #efeeea;
-  } */
-  .navbar-expand-xl .navbar-nav .nav-link {
-    color: #fff !important;
-  }
-  .fixed .navbar-expand-xl .navbar-nav .nav-link {
-    color: #fff !important;
-  }
-  .navbar .collapse.show {
-    height: calc(100vh - 0px);
-  }
   .navbar-inside {
-    height: calc(100vh - 80px);
-    padding: 0 15px;
-    display: flex;
-    flex-flow: column;
-  }
-  .navbar-expand-xl .navbar-nav .nav-item {
-    padding: 0;
-    margin: 0;
-    border-bottom: solid 1px #333;
-  }
-  .navbar-expand-xl .navbar-nav .nav-link {
-    font-size: 16px;
-    line-height: 30px;
-    padding: 15px 0;
-    position: relative;
-    color: #000;
+
   }
 
-  .navbar-nav.sm-collapsible .sub-arrow {
-    border: 0;
-    margin: 0;
-    width: auto;
-    font-size: 30px;
-    line-height: 60px;
-    top: 0;
-    height: 60px;
-    color: #333;
-    width: 40px;
-  }
   .dropdown-menu {
     background: transparent;
     border: 0;
@@ -5296,6 +5340,9 @@ h2.rv_name {
     height: 100%;
     justify-content: flex-start;
     padding-top: 80px;
+  }
+  .navbar-nav {
+    flex-direction: column;
   }
   .navbar-toggler:focus {
     box-shadow: none;
@@ -5400,6 +5447,7 @@ h2.rv_name {
   }
   .header-top {
     padding: 0;
+    width: 40%;
   }
   .about-us-main-text,
   .about-us-main-img {
@@ -5450,6 +5498,12 @@ h2.rv_name {
   .slider-title {
     font-size: 40px;
   }
+  .search-container {
+    display: none;
+  }
+  .header-main-content {
+    padding: 0;
+  }
 
   /* ==================== footer ========================== */
   .footer-content {
@@ -5485,7 +5539,13 @@ h2.rv_name {
   }
   .navbar-collapse,
   .navbar-collapse.collapsing {
-    top: 0px;
+    top: 54px;
+  }
+  .navbar-collapse, .navbar-collapse.collapsing {
+    width: 60%;
+  }
+  .navbar-inside {
+    padding: 40px;
   }
   .navbar .collapse.show {
     height: calc(100vh - 0px);
@@ -5568,6 +5628,8 @@ h2.rv_name {
   }
   .navbar-nav {
     text-align: center;
+    text-align: center;
+    padding-bottom: 90px;
   }
   .kh-simple-slide .slide-scroll article,
   .kh-simple-slide .slide-scroll li {
@@ -5621,6 +5683,7 @@ h2.rv_name {
   }
   .header-top {
     padding: 0;
+  
   }
   .header-top {
     justify-content: flex-start;
@@ -5694,5 +5757,21 @@ h2.rv_name {
 @media (max-width: 575.98px) {
   .banner-text h1 {
     font-size: 40px;
+  }
+  .navbar-inside {
+    padding: 20px;
+  }
+  .navbar-expand-xl .navbar-nav .nav-link {
+    font-size: 14px;
+  }
+  .Linklist__Item a {
+    font-size: 12px;
+
+  }
+  .Linklist {
+    align-items: flex-start;
+  }
+  .navbar-expand-xl .navbar-nav .nav-link img {
+    height: 100%;
   }
 }
